fix: Add spacing between images

--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@
     width: 18rem;
 }
 
-.row {
+.col-sm {
     margin-bottom: 3rem;
 }
-
